Grease pencil error: while drawing brush pointer resets to arrow after scrolling another panel. #44084

Closed
opened 2015-03-22 00:19:29 +01:00 by Demian SS · 10 comments

System Information

  • MSI GE60 PC APACHE

  • Intel I5 2.9Ghz - 4th generation

  • 4Gb DDR3 Ram

  • Primary Video card - Intel HD 4th gen

  • Secondary video card - Nvidia GTX850 2Gb

  • Manjaro GNU/Linux 64bit latest stable update 0.8.12

  • Nvidia driver - manjaro stable 346.47

Blender Version
Broken: 2.74 RC2

Short description of error
While drawing with grease pencil and "Continuous drawing" enable the mouse cursor represents a brush, but the cursors resets to the arrow after scrolling with middle mouse button on another panel.

Exact steps for others to reproduce the error

  1. In 3D vieport, go to "Grease Pencil" in "tools shelf".
  2. Activate "Continuous drawing" and press the "draw" button, draw something (the cursor should becom a brush).
  3. Go to any other panel/window of blender, like "outliner" or "properties".
  4. Scroll holding down the middle mouse button (not scrolling with the wheel).
  5. The cursor turns back as an arrow but it is possible to keep drawing.

Not a big deal, can be confusing because blender is still in "drawing mode" but the cursor does not represent such state.

**System Information** * MSI GE60 PC APACHE * Intel I5 2.9Ghz - 4th generation * 4Gb DDR3 Ram * Primary Video card - Intel HD 4th gen * Secondary video card - Nvidia GTX850 2Gb * Manjaro GNU/Linux 64bit latest stable update 0.8.12 * Nvidia driver - manjaro stable 346.47 **Blender Version** Broken: 2.74 RC2 **Short description of error** While drawing with grease pencil and "Continuous drawing" enable the mouse cursor represents a brush, but the cursors resets to the arrow after scrolling with middle mouse button on another panel. **Exact steps for others to reproduce the error** 1. In 3D vieport, go to "Grease Pencil" in "tools shelf". 2. Activate "Continuous drawing" and press the "draw" button, draw something (the cursor should becom a brush). 3. Go to any other panel/window of blender, like "outliner" or "properties". 4. Scroll holding down the middle mouse button (not scrolling with the wheel). 5. The cursor turns back as an arrow but it is possible to keep drawing. Not a big deal, can be confusing because blender is still in "drawing mode" but the cursor does not represent such state.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @demiansan

Added subscriber: @demiansan
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Was this an issue in earlier releases too?

Was this an issue in earlier releases too?
Author

Checking...
And yes, at least in 2.73a and 2.72b official release.

Recently started playing with grease pencil and stumbled on this.

Checking... And yes, at least in 2.73a and 2.72b official release. Recently started playing with grease pencil and stumbled on this.
Joshua Leung self-assigned this 2015-03-22 12:52:20 +01:00
Member

Right, good to know that this won't be due to anything of the changes for 2.74, and so isn't a blocking issue for that release :)

Assigning to self to investigate along with a few other minor issues like this.

Right, good to know that this won't be due to anything of the changes for 2.74, and so isn't a blocking issue for that release :) Assigning to self to investigate along with a few other minor issues like this.
Author

Tested on a windows 7 64bits environment, blender versions 2.42b, 2.73a and 2.74 RC2. All official release.

And the same thing happens, looks like it is not a system only or driver specific bug.

Tested on a windows 7 64bits environment, blender versions 2.42b, 2.73a and 2.74 RC2. **All official release.** And the same thing happens, looks like it is not a system only or driver specific bug.

This issue was referenced by 2b9d806432

This issue was referenced by 2b9d806432db5f17244fcf859c2ec1441c2b3ff9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2b9d806432.

Closed by commit 2b9d806432.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44084
No description provided.