Fix T44084 - Cursor gets reset after MMB scrolling in another area while in GPencil Continous Draw Mode